--- a/Portfolio2024/src/app/header/header.component.html
+++ b/Portfolio2024/src/app/header/header.component.html
@@ -4,16 +4,19 @@
             <img src="icon/Metagross.png" alt="Logo">
             <span class="logo-text">KEVINP <span class="portfolio-text">Portafolio</span></span>
         </div>
-        <i class='bx bx-menu' id="menu-icon"></i>
-        <nav>
+        <i class='bx bx-menu' id="menu-icon" (click)="toggleMenu()"></i>
+        <nav [class.active]="isMenuOpen">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about-me">Sobre Mi</a></li>
-                <li><a href="#portafolio">Portafolio</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#home" (click)="closeMenu()">Home</a></li>
+                <li><a href="#about-me" (click)="closeMenu()">Sobre Mi</a></li>
+                <li><a href="#portafolio" (click)="closeMenu()">Portafolio</a></li>
+                <li><a href="#servicios" (click)="closeMenu()">Servicios</a></li>
+                <li><a href="#contacto" (click)="closeMenu()">Contacto</a></li>
             </ul>
-            <a href="index2.html" class="download-cv-button">Download CV</a>
+            <a href="CVKevinPizarro2024.pdf" 
+               class="download-cv-button" 
+               download="CVKevinPizarro2024.pdf" 
+               (click)="closeMenu()">Download CV</a>
         </nav>
     </div>
 </header>
