--- a/Portfolio2024/src/app/home/home.component.css
+++ b/Portfolio2024/src/app/home/home.component.css
@@ -27,6 +27,7 @@ section.home {
 }
 
 .home-content p span {
+    color: var(--secondary-color);
     font-weight: bold;
 }
 
@@ -34,12 +35,53 @@ section.home {
     flex: 1;
     display: flex;
     justify-content: center;
+    position: relative;
+}
+
+.volume-control {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    opacity: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.7);
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: ease, opacity 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
+}
+  
+.volume-control button {
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    margin-right: 10px;
+}
+  
+.volume-control button i {
+    font-size: 24px;
+}
+  
+#volume-slider {
+    width: 100px;
+    cursor: pointer;
 }
 
 .home-img video {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
+}
+
+.home-img:hover .volume-control {
+    bottom: 20px; /* La posición final deseada */
+    opacity: 1;
+    visibility: visible;
+    animation: ease;
+    pointer-events: auto; /* Permite la interacción con el control cuando está visible */
 }
 
 
