--- a/Portfolio2024/src/styles.css
+++ b/Portfolio2024/src/styles.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    font-family: 'Open Sans', 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+    font-family:    system-ui, 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
     background: var(--bg-primary-color);
 }
 
