--- a/Portfolio2024/src/app/home/home.component.html
+++ b/Portfolio2024/src/app/home/home.component.html
@@ -2,56 +2,22 @@
     <div class="home-content">
         <h3>Hola!, yo soy</h3>
         <h1>Kevin Pizarro</h1>
-        <h3>Desarrollador FullStack<span class="texto-multiple portfolio-text" > / </span>Desarrollador Software</h3>
+        <h3>Desarrollador FullStack <span class="texto-multiple portfolio-text"> / </span>Desarrollador Software</h3>
         <h3>Desarrollador de Unreal Engine</h3>
-        <p>Especialista en desarrollo Web, desarrollo de software con soluciones creativas
-            y atractivas, con metodologias de experiencia de usuario.
-            <span class="portfolio-text"> "Creo que hoy en día la tecnología y el arte 
-            pueden coexistir de una manera brillante y hermosa, entregando nuevas experiencias 
-            tanto para desarrolladores como para usuarios."</span></p>
+        <p>
+            Especialista en desarrollo Web, desarrollo de software con soluciones creativas y atractivas, con metodologias de experiencia de usuario.
+            <span class="portfolio-text">
+                "creo que hoy en dia la tecnologia y el arte pueden coexistir de una manera brillante y hermosa, entregando nuevas
+                experiencias tanto para desarrolladores como para usuarios."
+            </span>
+        </p>
     </div>
-    
-    <div class="home-img">
-        <video id="home-video" src="video/TestUnreal.mp4" autoplay loop muted></video>
-            <div class="volume-control">
-                <button (click)="toggleMute()">
-                <i *ngIf="isMuted" class="fas fa-volume-mute"></i>
-                <i *ngIf="!isMuted" class="fas fa-volume-up"></i>
-                </button>
-                <input type="range" id="volume-slider" min="0" max="1" step="0.01" (input)="changeVolume($event)">
-          </div>
-    </div>
-</section>
 
-<section class="technologies" id="technologies">
-    <hr class="divisor">
-    <h1>Resumen de Tecnologías</h1>
-    <div class="slider">
-        <div class="slide-track">
-            <div class="slide"><i class='bx bxl-html5 icon'></i><p>HTML</p></div>
-            <div class="slide"><i class='bx bxl-css3 icon'></i><p>CSS</p></div>
-            <div class="slide"><i class='bx bxl-javascript icon'></i><p>Javascript</p></div>
-            <div class="slide"><i class='bx bxl-python icon'></i><p>Python</p></div>
-            <div class="slide"><i class='bx bxl-nodejs icon'></i><p>NodeJS</p></div>
-            <div class="slide"><i class='bx bxl-angular icon'></i><p>Angular</p></div>
-            <div class="slide"><i class='bx bxl-c-plus-plus icon'></i><p>C++</p></div>
-            <div class="slide"><i class='bx bxl-bootstrap icon'></i><p>Bootstrap</p></div>
-            <div class="slide"><i class='bx bxl-github icon'></i><p>GitHub</p></div>
-            <div class="slide"><i class='bx bxl-adobe icon'></i><p>Adobe Suite</p></div>
-            <div class="slide"><i class='bx bxl-blender icon'></i><p>Blender</p></div>
-            
-            <div class="slide"><i class='bx bxl-html5 icon'></i><p>HTML</p></div>
-            <div class="slide"><i class='bx bxl-css3 icon'></i><p>CSS</p></div>
-            <div class="slide"><i class='bx bxl-javascript icon'></i><p>Javascript</p></div>
-            <div class="slide"><i class='bx bxl-python icon'></i><p>Python</p></div>
-            <div class="slide"><i class='bx bxl-nodejs icon'></i><p>NodeJS</p></div>
-            <div class="slide"><i class='bx bxl-angular icon'></i><p>Angular</p></div>
-            <div class="slide"><i class='bx bxl-c-plus-plus icon'></i><p>C++</p></div>
-            <div class="slide"><i class='bx bxl-bootstrap icon'></i><p>Bootstrap</p></div>
-            <div class="slide"><i class='bx bxl-github icon'></i><p>GitHub</p></div>
-            <div class="slide"><i class='bx bxl-adobe icon'></i><p>Adobe Suite</p></div>
-            <div class="slide"><i class='bx bxl-blender icon'></i><p>Blender</p></div>
-        </div>
+    <div class="home-video-container">
+        <video id="home-video" src="video/TestUnreal.mp4" autoplay loop muted></video>
+        <button class="mute-button" (click)="toggleMute()">
+            <i *ngIf="isMuted" class="fas fa-volume-mute"></i>
+            <i *ngIf="!isMuted" class="fas fa-volume-up"></i>
+        </button>
     </div>
-    <hr class="divisor">
 </section>
